--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="mailto:amira-qidwai@uiowa.edu">Contact</a></li
                         <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
                     </ul>
                 </div>
@@ -46,8 +46,9 @@
             <div class="row gx-4 gx-lg-5">
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
+                      <a href="projectpage1/"><img class="card-img-top" src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..."></a>
                         <div class="card-body">
-                            <h2 class="card-title">Card One</h2>
+                          <h2 class="card-title">Project 3</h2>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
                         </div>
                         <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
@@ -55,17 +56,19 @@
                 </div>
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
+                      <a href="projectpage2/"><img class="card-img-top" src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..."></a>
                         <div class="card-body">
-                            <h2 class="card-title">Card Two</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+                            <h2 class="card-title">Project 2</h2>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
                         </div>
                         <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
+                      <a href="projectpage3/"><img class="card-img-top" src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..."></a>
                         <div class="card-body">
-                            <h2 class="card-title">Card Three</h2>
+                            <h2 class="card-title">Project 3</h2>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
                         </div>
                         <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
